Modified: Solved the mysteries of vanishing actions and ignored timeouts for search-actions
git-svn-id: https://cvs.dai-labor.de/jiac/jiac-tng/trunk@18593 d8bac29e-b7f5-0310-9bdb-a06bcefdf3b8